--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -167,6 +167,9 @@
                             Birthday
                         </th>
                         <th class="px-4 py-2 text-left">
+                            Last Updated Age
+                        </th>
+                        <th class="px-4 py-2 text-left">
                             Last Updated
                         </th>
                         <th class="px-4 py-2 text-left">
@@ -193,6 +196,9 @@
                             </td>
                             <td class="px-4 py-2">
                                 @member.Birthday.ToString("MMM dd, yyyy")
+                            </td>
+                            <td class="px-4 py-2">
+                                @member.LastVisitedAge
                             </td>
                             <td class="px-4 py-2">
                                 @member.LastModified.ToString("MMM dd, yyyy")
