--- a/AUF.EMR.MVC/Views/PregnancyAppointment/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyAppointment/Edit.cshtml
@@ -22,9 +22,16 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
                     <div class="mb-4">
-                        <label asp-for="PregnancyAppointment.Date" class="block mb-2 text-sm font-medium text-gray-700">Date</label>
-                        <input asp-for="PregnancyAppointment.Date" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
-                        <span asp-validation-for="PregnancyAppointment.Date" class="block mb-2 text-sm text-red-700"></span>
+                        <label asp-for="PregnancyAppointment.Date" class="block mb-2 text-sm font-medium text-gray-700">Appointment Date</label>
+                        <div class="relative w-full md:w-4/5 mb-4">
+                            <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
+                                </svg>
+                            </div>
+                            <input datepicker id="acceptedDate" asp-for="PregnancyAppointment.Date" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Select date">
+                            <span asp-validation-for="PregnancyAppointment.Date" class="block mb-2 text-sm text-red-700"></span>
+                        </div>
                     </div>
                     <div class="mb-4">
                         <label asp-for="PregnancyAppointment.Weight" class="block mb-2 text-sm font-medium text-gray-700">Weight</label>
