--- a/AUF.EMR.MVC/Views/User/UserProfile.cshtml
+++ b/AUF.EMR.MVC/Views/User/UserProfile.cshtml
@@ -63,7 +63,7 @@
                                        class="block mb-2 text-sm font-medium text-black-900 dark:text-white">Date of Birth</label>
                                 <input type="text" id="birth_date"
                                        class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 "
-                                       placeholder="Contact No." value="@Model.User.Birthday" disabled>
+                                       placeholder="Contact No." value="@Model.User.Birthday.ToString("MMM dd, yyyy")" disabled>
                             </div>
                         </div>
 
