--- a/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="block mb-2 text-sm text-red-700"></div>
-            <div class="w-3/4">
+            <div class="w-3/4 home-hero">
                 <h1 class="text-xl">Create</h1>
                 <h1 class="text-2xl font-bold text-gray-800 mb-4">Family Planning Client Assessment Record</h1>
             </div>
