--- a/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
@@ -66,7 +66,7 @@
                                 @Html.DisplayFor(modelItem => item.Age)
                             </td>
                             <td class="px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.Birthday)
+                                @item.Birthday.ToString("MMM dd, yyyy")
                             </td>
                             <td class="px-4 py-2 text-left">
                                 @((item.IsNhts) ? "NHTS" : "Non NHTS")
