--- a/AUF.EMR.MVC/Views/OralHealthClient/OneToFour.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/OneToFour.cshtml
@@ -53,7 +53,7 @@
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.FormattedFullName)</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Sex)</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Age)</td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Birthday)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@item.Birthday.ToString("MMM dd, yyyy")</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@((item.IsNhts) ? "NHTS" : "Non NHTS")</td>
 
                             <td class="border-b border-gray-100 px-4 py-2 text-left text-lg">
