--- a/AUF.EMR.MVC/Views/OralHealthClient/TwentyToFourtynine.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/TwentyToFourtynine.cshtml
@@ -69,7 +69,7 @@
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Household.FullAddress)</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Sex)</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Age)</td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Birthday)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@item.Birthday.ToString("MMM dd, yyyy")</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">
                                 <input type="checkbox" disabled @(item.IsNhts ? "checked" : "") />
                             </td>
