--- a/AUF.EMR.MVC/Views/Shared/Layouts/_HouseholdLayout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Layouts/_HouseholdLayout.cshtml
@@ -21,6 +21,8 @@
         </main>
     </div>
 
+    <partial name="_Footer" />
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/flowbite/dist/flowbite.js"></script>
