--- a/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
@@ -236,6 +236,21 @@
                     <span class="flex-1 ms-3 whitespace-nowrap">Pregnancy Records</span>
                 </a>
             </li>
+            <li>
+                <a asp-action="Index" asp-controller="DiabetesRisk" asp-route-householdNo="@Model" class="nav-link @((controller.Equals("DiabetesRisk") || controller.Equals("DiabetesRisk")) && inCrud ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                    @{
+                        if ((controller.Equals("DiabetesRisk") || controller.Equals("DiabetesRisk")) && inCrud)
+                        {
+                            <img src="~/img/Nav/memo-circle-check.png" class="w-5 h-5" />
+                        }
+                        else
+                        {
+                            <img src="~/img/Nav/memo-circle-check-dark.png" class="w-5 h-5" />
+                        }
+                    }
+                    <span class="flex-1 ms-3 whitespace-nowrap">Diabetes Risk</span>
+                </a>
+            </li>
         </ul>
     </div>
 </aside>
